<resources>
    <string name="app_name">DesignPattern</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email or Phone</string>
    <string name="password">Password</string>
    <string name="PREF_COMMIT_ERROR">Something went wrong, Please try again.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="label_home">Home</string>
    <string name="label_jobs">Jobs</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_settings">Settings</string>
    <string name="label_aboutus">About uS</string>
    <string name="label_privacypolicy">Privacy Policy</string>
    <string name="label_changepassword">Change Password</string>
    <string name="label_logout">Logout</string>
    <string name="label_profile">Profile</string>
    <string name="label_link">Link</string>
    <string name="label_change_password">Change Password</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="title_activity_pager">PagerActivity</string>
    <string name="title_activity_frame">FrameActivity</string>
    <string name="sign_in_title">Sign In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create_account">Create Account</string>
    <string name="error_email">Enter Valid Email or Username</string>
    <string name="error_password">Enter Valid Password</string>
    <string name="label_fragment_splash">fragment_splash</string>
    <string name="label_fragment_login">fragment_login</string>
    <string name="label_fragment_register">fragment_register</string>
    <string name="label_fragment_verification">fragment_verification</string>
    <string name="label_fragment_forget_password">fragment_forget_password</string>
</resources>
