<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout">

    <data>

        <variable
            name="data"
            type="com.app.thenhpattern.viewmodel.auth.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.auth.SplashFragment">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="0dp"
                android:layout_height="@dimen/edt_height"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"

                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:text="@={data.loginRequest.email}"
                android:background="@drawable/rect_text_edit"
                android:textColor="@color/edt_text_color"
                android:textColorHint="@color/edt_hint_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/edt_height"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/rect_text_edit"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:text="@={data.loginRequest.password}"
                android:textColor="@color/edt_text_color"
                android:textColorHint="@color/edt_hint_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_email" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rect_text_edit"
                android:text="Sign In"
                android:textAllCaps="false"
                android:textColor="@color/btn_text_color"
                app:layout_constraintEnd_toEndOf="@+id/edt_password"
                app:layout_constraintStart_toStartOf="@+id/txt_forget"
                app:layout_constraintTop_toBottomOf="@+id/txt_forget" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/rect_text_edit"
                android:text="Register"
                android:textAllCaps="false"
                android:textColor="@color/btn_text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btn_login"
                app:layout_constraintStart_toStartOf="@+id/btn_login"
                app:layout_constraintTop_toBottomOf="@+id/btn_login"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/sign_in_title"
                android:textColor="@color/txt_color"
                android:textSize="@dimen/size_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/edt_email"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.19" />

            <TextView
                android:id="@+id/txt_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:text="@string/forget_password"
                android:textColor="#90A4AE"
                app:layout_constraintEnd_toEndOf="@+id/edt_password"
                app:layout_constraintTop_toBottomOf="@+id/edt_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>